change button select state, add flyTo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div id="controls" class="controls">
-    <button id="requestHelp">Request Help</button>
+    <button id="requestHelp" class="requestStatus">Request Help</button>
   </div>
       
 
